<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEditEmail"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:autofillHints=""
        android:background="@color/dark_gray"
        android:drawableStart="@android:drawable/sym_action_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/bree_serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/semi_white"
        android:textColorHint="@color/semi_white_light"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginTitle"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtEditPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@color/dark_gray"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/bree_serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/semi_white"
        android:textColorHint="@color/semi_white_light"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditEmail" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/bree_serif"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="@font/bree_serif"
        android:text="@string/log_in"
        android:textColor="@color/semi_white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>